# nomoreline-api/src/routes/authentication.js
@@ -1,22 +1,13 @@
 "use strict";
 
 var express = require('express');
-
 var router = express.Router();
-var customersValidations = require("../services/customer/validation");
-var util = require("../services/util");
+
+var utilApp = require("../services/utilApp");
 
 router.route('/customers')
     .post(function (req, res) {
-        if(customersValidations.is_a_valid_customer_data(req.body)){
-            res.status(200);
-            res.send("cool");         
-        }else{
-            res.status(400);
-            var message = "Bad request";
-            var fields = "invalid body";   
-            res.send(util.send_error(res.statusCode,message,fields)); 
-        }
+		res.status(501).send(utilApp.response(res.statusCode,"Not Implemented",{}));
     }
 );
 
